--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@
     --background-color: #ffffff;
     --text-color: #000000;
     --primary-color: #1976d2;
+    --border-color: #e0e0e0;
   }
   
   /* Dark Theme */
@@ -10,5 +11,6 @@
     --background-color: #121212;
     --text-color: #ffffff;
     --primary-color: #bb86fc;
+    --border-color: #e0e0e0;
   }
   
